charon/tests/ui/unsupported/advanced-const-generics.out
error: Constant parameters of non-literal type are not supported
  --> tests/ui/unsupported/advanced-const-generics.rs:14:8
   |
14 | fn foo<const X: Foo>() -> Foo {
   |        ^^^^^^^^^^^^

error: Item `test_crate::foo` caused errors; ignoring.
  --> tests/ui/unsupported/advanced-const-generics.rs:14:1
   |
14 | fn foo<const X: Foo>() -> Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Well-formedness clauses are unsupported
  --> tests/ui/unsupported/advanced-const-generics.rs:20:5
   |
20 |     [(); N + 1]:,
   |     ^^^^^^^^^^^

error: Item `test_crate::bar` caused errors; ignoring.
  --> tests/ui/unsupported/advanced-const-generics.rs:18:1
   |
18 | / fn bar<const N: usize>()
19 | | where
20 | |     [(); N + 1]:,
   | |_________________^

ERROR Charon failed to translate this code (4 errors)
